# Federated-Learning

./: FL in Medicine.docx  Federated Learning in Medicine.pptx  README.md  __init__.py  result.txt  server_app.py
Project/: README.md  pyproject.toml  result.txt
Project/Project/: client_app.py  server_app.py  task.py
