
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project01"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Cupcake"

[tool.flwr.app.components]
serverapp = "project01.server_app:app"
clientapp = "project01.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 30
fraction-fit = 0.5
local-epochs = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 6
