# file di configurazione pyproject.toml

# strumenti necessari per costruire il pacchetto Python del progetto (ecosistema di Hatch)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# metadati del progetto Python (nome, versione, descrizione e licenza)
# elenco dipendenze del progetto, librerie Python devono essere installate
[project]
name = "project01"
version = "1.0.0"
description = ""
license = "Apache-2.0"

# Dipendenze del progetto:
# - flwr[simulation]: Il framework Flower per l'apprendimento federato.
# - flwr-datasets[vision]: gestione di dataset federati per dati visivi.
# - torch: libreria PyTorch per il deep learning.
# - torchvision: Libreria PyTorch che fornisce dataset, architetture di modelli e trasformazioni di immagini comuni.
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

# tutti i moduli Python e i pacchetti trovati nella directory del progetto (.) devono essere inclusi nel pacchetto wheel.
[tool.hatch.build.targets.wheel]
packages = ["."]

# campo opzionale per identificare l'autore
[tool.flwr.app]
publisher = "Cupcake"

# componenti principali dell'applicazione Flower e loro allocazione
# serverapp: Definisce il punto di ingresso dell'applicazione server. Viene chiamato all'avvio del server Flower.
# clientapp: Definisce il punto di ingresso dell'applicazione client. Viene chiamato quando un client Flower viene avviato e si connette al server.
[tool.flwr.app.components]
serverapp = "project01.server_app:app"
clientapp = "project01.client_app:app"

# configurazioni per il comportamento del apprendimento federato.
# num-server-rounds: Il numero totale di round di federazione.
# fraction-fit: La frazione di client disponibili che verranno selezionati per partecipare a ciascun round
# local-epochs: Il numero di epoche locali che ciascun client eseguirà sui propri dati prima di inviare gli aggiornamenti
[tool.flwr.app.config]
num-server-rounds = 30
fraction-fit = 0.5
local-epochs = 3

# Ambienti di esecuzione.
[tool.flwr.federations]
default = "local-simulation"

# dettagli specifici per la local-simulation
# numero di client simulati
[tool.flwr.federations.local-simulation]
options.num-supernodes = 6
